--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			form.addEventListener("submit", (e) => {
 				e.preventDefault();
 				if (input.value) {
-					socket.emit("chat message", input.value);
+					socket.timeout(3).emit("chat message", input.value);
 					input.value = "";
 				}
 			});
